@@ -1,6 +1,11 @@
 CHANGES
 =======
 
+X.X.X (XX-XX-2014)
+------------------
+
+- Publish TCPConnector properties: verify_ssl, family, resolve, resolved_hosts.
+
 0.8.2 (06-22-2014)
 ------------------
 
